--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "express": "vue-cli-service express:watch",
+    "express:run": "vue-cli-service express:run"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "ejs": "^3.1.3",
+    "express-history-api-fallback": "^2.2.1",
+    "nodemailer": "^6.4.10",
+    "swiper": "^5.4.5",
     "vue": "^2.6.11",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
-    "swiper": "^5.4.5"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
@@ -26,6 +32,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
+    "vue-cli-plugin-express": "~1.0.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
