--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "body-scroll-lock": "^3.0.3",
     "core-js": "^3.6.5",
     "ejs": "^3.1.3",
     "express-history-api-fallback": "^2.2.1",
