--- a/package.json
+++ b/package.json
@@ -6,53 +6,55 @@
     "rmdist": "rimraf dist"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.8.3",
-    "autoprefixer": "^9.8.6",
+    "@babel/core": "^7.20.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "autoprefixer": "^9.8.8",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.3.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.26.7",
-    "browser-sync-webpack-plugin": "^2.2.2",
+    "browser-sync": "^2.27.11",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "cross-env": "^3.2.4",
-    "css-loader": "^3.4.2",
-    "cssnano": "^4.1.10",
+    "css-loader": "^3.6.0",
+    "cssnano": "^4.1.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
-    "mini-css-extract-plugin": "^1.0.0",
+    "mini-css-extract-plugin": "^1.6.2",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.0",
-    "object-path": "^0.11.4",
+    "object-path": "^0.11.8",
     "path": "^0.12.7",
-    "postcss": "^8.1.1",
-    "postcss-loader": "^4.0.4",
-    "postcss-preset-env": "^6.7.0",
-    "sass": "^1.27.0",
-    "sass-loader": "^10.0.3",
+    "postcss": "^8.4.20",
+    "postcss-loader": "^4.3.0",
+    "postcss-preset-env": "^6.7.1",
+    "sass": "^1.57.1",
+    "sass-loader": "^10.4.1",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^0.6.2",
-    "vue-lazyload": "^1.3.3",
-    "vue-loader": "^15.8.3",
+    "vue-lazyload": "^1.3.4",
+    "vue-loader": "^15.10.1",
     "vue-router": "^2.8.1",
     "vue-session": "^0.9.8",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-babel-compiler": "^2.0.0",
+    "vue-template-compiler": "^2.7.14",
     "vuex": "^2.5.0",
     "vuex-localstorage": "^1.0.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-middleware": "^3.7.0",
-    "webpack-dev-server": "^3.10.1",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^3.7.3",
+    "webpack-dev-server": "^3.11.3",
+    "webpack-hot-middleware": "^2.25.3"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "body-scroll-lock": "^3.0.3",
     "focus-visible": "^5.2.0",
     "swiper": "^5.4.5",
-    "vue": "^2.6",
+    "vue": "^2.7.14",
     "vue-multiselect": "^2.1.6"
   }
 }
